# api-documentation.json
@@ -13,7 +13,7 @@
                 "environment": {
                     "description": "Server Environment",
                     "default": "127.0.0.1:8000",
-                    "enum": ["127.0.0.1:8000", "api.hcorp.my.id"]
+                    "enum": ["127.0.0.1:8000", "soilapi.hcorp.my.id"]
                 }
             }
         }
@@ -63,16 +63,6 @@
                             "type": "number",
                             "format": "float"
                         }
-                    },
-                    {
-                        "name": "light",
-                        "in": "query",
-                        "description": "Light level to filter the data by",
-                        "required": false,
-                        "schema": {
-                            "type": "number",
-                            "format": "float"
-                        }
                     }
                 ],
                 "responses": {
@@ -88,15 +78,13 @@
                                                 "id": 1,
                                                 "temperature": 92.0,
                                                 "air_humidity": 12.0,
-                                                "soil_humidity": 234.0,
-                                                "light": 111.0
+                                                "soil_humidity": 234.0
                                             },
                                             {
                                                 "id": 2,
                                                 "temperature": 14.0,
                                                 "air_humidity": 45.0,
-                                                "soil_humidity": 81.0,
-                                                "light": 77.0
+                                                "soil_humidity": 81.0
                                             }
                                         ]
                                     }
@@ -125,8 +113,7 @@
                                     "value": {
                                         "temperature": 25.0,
                                         "air_humidity": 60.0,
-                                        "soil_humidity": 40.0,
-                                        "light": 300.0
+                                        "soil_humidity": 40.0
                                     }
                                 }
                             }
@@ -443,6 +430,37 @@
                                                 "id": 1,
                                                 "message": "The plant is dry",
                                                 "average_id": 1,
+                                                "created_at": "2024-12-19T10:00:00Z",
+                                                "updated_at": "2024-12-19T10:00:00Z"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+
+        "/get_message_latest": {
+            "get": {
+                "tags": ["HTTP"],
+                "summary": "Get a last message",
+                "description": "Retrieve a last message and its details.",
+                "responses": {
+                    "200": {
+                        "description": "last Message retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "examples": {
+                                    "success": {
+                                        "description": "Successfully retrieved last message",
+                                        "value": {
+                                            "data": {
+                                                "id": 2,
+                                                "message": "Nothing can do",
+                                                "average_id": 2,
                                                 "created_at": "2024-12-19T10:00:00Z",
                                                 "updated_at": "2024-12-19T10:00:00Z"
                                             }
